force-app/reservation-app/main/default/objects/Reservation__c/fields/Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time__c</fullName>
    <label>Date and Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>