force-app/reservation-app/main/default/objects/Reservation__c/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <label>Preferences</label>
    <type>TextArea</type>
</CustomField>