force-app/reservation-app/main/default/objects/Reservation__c/fields/VIP__c.field-meta.xml
<CustomField>
    <fullName>VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP?</label>
    <type>Checkbox</type>
</CustomField>